--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <a routerLink="/profile/edit">リアクティブフォーム</a>
   <a routerLink="/templateform">テンプレート駆動フォーム</a>
   <a routerLink="/observe">Observe</a>
+  <a routerLink="/httptest">HttpTest</a>
 </nav><hr />
 <router-outlet></router-outlet>
 <hr/>
